[gd_scene load_steps=39 format=2]

[ext_resource path="res://Assets/Fundos/Soccer_Ships_Arena_Fundo_1_PC.png" type="Texture" id=1]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Alberta1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Alberta2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/Soccer_Ships_Menu_Botão2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu/Soccer_Ships_Menu_Botão3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu/Soccer_Ships_Menu_Botão1.png" type="Texture" id=6]
[ext_resource path="res://TextureButton.gd" type="Script" id=7]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Alberta3.png" type="Texture" id=8]
[ext_resource path="res://Menu.gd" type="Script" id=9]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Taylor1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Taylor2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Taylor3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Lola2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Lola1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Lola3.png" type="Texture" id=15]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Jet1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Jet3.png" type="Texture" id=17]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Jet2.png" type="Texture" id=18]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Bella1.png" type="Texture" id=19]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Bella2.png" type="Texture" id=20]
[ext_resource path="res://Assets/Naves/Soccer_Ships_Bella3.png" type="Texture" id=21]
[ext_resource path="res://Assets/Menu/Soccer_Ships_Logo.png" type="Texture" id=22]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 3
frame_0/texture = ExtResource( 2 )
frame_1/texture = ExtResource( 3 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 8 )
frame_2/delay_sec = 0.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 277, -87 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Ship-X"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 277, 751 ), Vector2( 277, -87 ) ]
}

[sub_resource type="AnimatedTexture" id=4]
flags = 4
frames = 3
frame_0/texture = ExtResource( 10 )
frame_1/texture = ExtResource( 11 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 12 )
frame_2/delay_sec = 0.0

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 102, -85 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Ship-X"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 102, 678 ), Vector2( 102, -85 ) ]
}

[sub_resource type="AnimatedTexture" id=7]
flags = 4
frames = 3
frame_0/texture = ExtResource( 14 )
frame_1/texture = ExtResource( 13 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 15 )
frame_2/delay_sec = 0.0

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16, 682 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Ship-X"
length = 3.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.6 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Vector2( 16, 682 ), Vector2( 16, -78 ) ]
}

[sub_resource type="AnimatedTexture" id=10]
flags = 4
frames = 3
frame_0/texture = ExtResource( 16 )
frame_1/texture = ExtResource( 18 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 17 )
frame_2/delay_sec = 0.0

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 245, -231 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Ship-X"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 245, 981 ), Vector2( 245, -231 ) ]
}

[sub_resource type="AnimatedTexture" id=13]
flags = 4
frames = 3
frame_0/texture = ExtResource( 19 )
frame_1/texture = ExtResource( 20 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 21 )
frame_2/delay_sec = 0.0

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 154, -646 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Ship-X"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 154, 1328 ), Vector2( 154, -646 ) ]
}

[sub_resource type="AnimatedTexture" id=16]
flags = 4
frame_0/texture = ExtResource( 22 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 2560.0
margin_bottom = 4550.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ship" type="TextureRect" parent="."]
margin_left = 277.0
margin_top = -87.0
margin_right = 597.0
margin_bottom = 233.001
rect_scale = Vector2( 0.14, 0.14 )
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="Ship"]
method_call_mode = 1
anims/RESET = SubResource( 2 )
anims/Ship-X = SubResource( 3 )

[node name="Ship2" type="TextureRect" parent="."]
margin_left = 102.0
margin_top = -85.0
margin_right = 422.0
margin_bottom = 235.0
rect_scale = Vector2( 0.14, 0.14 )
texture = SubResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="Ship2"]
anims/RESET = SubResource( 5 )
anims/Ship-X = SubResource( 6 )

[node name="Ship3" type="TextureRect" parent="."]
margin_left = 16.0
margin_top = 682.0
margin_right = 336.0
margin_bottom = 1002.0
rect_scale = Vector2( 0.14, 0.14 )
texture = SubResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="Ship3"]
anims/RESET = SubResource( 8 )
anims/Ship-X = SubResource( 9 )

[node name="Ship4" type="TextureRect" parent="."]
margin_left = 245.0
margin_top = -231.0
margin_right = 565.0
margin_bottom = 89.0
rect_scale = Vector2( 0.14, 0.14 )
texture = SubResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="Ship4"]
anims/RESET = SubResource( 11 )
anims/Ship-X = SubResource( 12 )

[node name="Ship5" type="TextureRect" parent="."]
margin_left = 154.0
margin_top = -646.0
margin_right = 474.0
margin_bottom = -325.999
rect_scale = Vector2( 0.14, 0.14 )
texture = SubResource( 13 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="Ship5"]
anims/RESET = SubResource( 14 )
anims/Ship-X = SubResource( 15 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 385.0
margin_top = 304.0
margin_right = 1397.0
margin_bottom = 755.0
rect_scale = Vector2( 0.14, 0.14 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -138.0
margin_right = 1487.0
margin_bottom = 662.0
rect_scale = Vector2( 0.14, 0.14 )
texture = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureButton" to="TextureButton" method="_on_TextureButton_pressed"]
